--- a/MasterDetailDemo/MasterDetailDemo.Android/MasterDetailDemo.Android.csproj
+++ b/MasterDetailDemo/MasterDetailDemo.Android/MasterDetailDemo.Android.csproj
@@ -68,6 +68,12 @@
     <PackageReference Include="Com.Airbnb.Xamarin.Forms.Lottie">
       <Version>2.7.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Analytics">
+      <Version>1.14.0</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AppCenter.Crashes">
+      <Version>1.14.0</Version>
+    </PackageReference>
     <PackageReference Include="Toasts.Forms.Plugin">
       <Version>3.3.2</Version>
     </PackageReference>
